--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,11 @@
 
 		<!-- ojdbc8 -->
 
-		<!-- https://mvnrepository.com/artifact/com.oracle.ojdbc/ojdbc8 -->
+		 <!-- https://mvnrepository.com/artifact/com.oracle.ojdbc/ojdbc8 -->
 		<dependency>
-			<groupId>com.oracle.ojdbc</groupId>
-			<artifactId>ojdbc8</artifactId>
-			<version>19.3.0.0</version>
+   	 	<groupId>com.oracle.database.jdbc</groupId>
+   		 <artifactId>ojdbc8</artifactId>
+    	<version>19.8.0.0</version>
 		</dependency>
 
 
